--- a/build.xml
+++ b/build.xml
@@ -58,9 +58,8 @@
 		</copy>
 		<echo file="dist/${ant.project.name}/texasholdem-dh.sh" append="false">#\!/bin/sh${line.separator}java -classpath "libs/gdx-backend-lwjgl-natives.jar:libs/gdx-backend-lwjgl-sources.jar:libs/gdx-backend-lwjgl.jar:libs/gdx-natives.jar:libs/gdx.jar:libs/tween-engine-api.jar:texasholdem-dh.jar" org.darkhood.games.texasholdem.Main
 		</echo>
-		<zip destfile="dist/${ant.project.name}_latest.zip" basedir="dist" update="true">
-			<excludesfile name="${ant.project.name}_latest.zip"/>
-		</zip>
+		<zip destfile="dist/${ant.project.name}_latest.zip" basedir="dist" update="true" 
+			excludes="${ant.project.name}_latest.zip" compress="true" />
 	</target>
 	
 </project>
