--- a/build.xml
+++ b/build.xml
@@ -4,6 +4,7 @@
     <property name="debuglevel" value="source,lines,vars"/>
     <property name="target" value="1.7"/>
     <property name="source" value="1.7"/>
+	<property name="dist" value="dist"/>
     <path id="texasholdem-dh.classpath">
         <pathelement location="texas-holdem-desktop/bin"/>
         <pathelement location="texas-holdem-desktop/libs/gdx-backend-lwjgl-natives.jar"/>
@@ -13,6 +14,14 @@
         <pathelement location="texas-holdem/libs/gdx.jar"/>
         <pathelement location="texas-holdem/libs/tween-engine-api.jar"/>
     </path>
+	<path id="build-classpath">
+	    <fileset dir="${dist}/${ant.project.name}/libs">
+	        <include name="*.jar"/>
+	    </fileset>		
+	</path>
+	<manifestclasspath property="lib.list" jarfile="${dist}/${ant.project.name}/${ant.project.name}.jar">
+	    <classpath refid="build-classpath"/>
+	</manifestclasspath>
     <target name="init">
         <mkdir dir="texas-holdem-desktop/bin"/>
         <copy includeemptydirs="false" todir="texas-holdem-desktop/bin">
@@ -41,13 +50,14 @@
         </javac>
     </target>
 	<target depends="build" name="jar">
-		<delete dir="dist"/>
+		<delete dir="dist"/>		
         <mkdir dir="dist"/>
 		<mkdir dir="dist/${ant.project.name}"/>
 		<mkdir dir="dist/${ant.project.name}/libs"/>
-        <jar destfile="dist/${ant.project.name}/libs/${ant.project.name}.jar" basedir="texas-holdem-desktop/bin" update="true">
+        <jar destfile="dist/${ant.project.name}/${ant.project.name}.jar" basedir="texas-holdem-desktop/bin" update="true">
             <manifest>
                 <attribute name="Main-Class" value="org.darkhood.games.texasholdem.Main"/>
+            	<attribute name="Class-Path" value="${lib.list}"/>
             </manifest>
         </jar>
     </target>
@@ -56,8 +66,6 @@
 	      <fileset dir="texas-holdem/libs"/>
 		   <fileset dir="texas-holdem-desktop/libs"/>
 		</copy>
-		<echo file="dist/${ant.project.name}/texasholdem-dh.sh" append="false">#\!/bin/sh${line.separator}java -classpath "libs/gdx-backend-lwjgl-natives.jar:libs/gdx-backend-lwjgl-sources.jar:libs/gdx-backend-lwjgl.jar:libs/gdx-natives.jar:libs/gdx.jar:libs/tween-engine-api.jar:texasholdem-dh.jar" org.darkhood.games.texasholdem.Main
-		</echo>
 		<zip destfile="dist/${ant.project.name}_latest.zip" basedir="dist" update="true" 
 			excludes="${ant.project.name}_latest.zip" compress="true" />
 	</target>
